--- a/public/css/hulk.css
+++ b/public/css/hulk.css
@@ -1,3 +1,30 @@
 .flag{
   background-image: url(/images/pf-national-logo.png) !important;
 }
+
+#hulk-fist{
+  pointer-events: none;
+  background-image: url(/images/fist1.png) !important;
+  background-size: 300px 300px;
+  background-repeat: no-repeat;
+  position: fixed;
+  left: 0px;
+  top: -300px;
+  width: 300px;
+  height: 300px;
+  z-index: 999;
+}
+
+
+#hulk-cracks{
+  pointer-events: none;
+  background-image: url(/images/cracks.png) !important;
+  background-size: 500px 500px;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0px;
+  top: -500px;
+  width: 600px;
+  height: 500px;
+  z-index: 998;
+}
