replace iframes with image

--- a/public/css/hulk.css
+++ b/public/css/hulk.css
@@ -28,3 +28,11 @@
   height: 500px;
   z-index: 998;
 }
+
+.filler-hulk{
+  background-image: url(/images/transform.png) !important;
+  min-height: 500px;
+  min-width: 600px;
+  background-size: 100%;
+
+}
